Template da tela dashboard

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,3 +1,150 @@
-<p>
-  dashboard works!
-</p>
+<mat-toolbar class="menu">
+  <div class="icon">
+    <button mat-icon-button><mat-icon>menu</mat-icon></button>
+  </div>
+  <div class="page">Home</div>
+  <div>&nbsp;</div>
+</mat-toolbar>
+
+<mat-card>
+  <div class="user-informations">
+    <div class="columns saldo">
+      <div><span class="mat-body-1">Josicleide dos Santos</span></div>
+      <div class="primary">R$ <span class="mat-display-1">152,88</span></div>
+    </div>
+
+    <div class="columns buttons">
+      <button mat-raised-button color="primary">Extrato</button>
+      <button mat-raised-button>Recarga</button>
+    </div>
+  </div>
+</mat-card>
+
+<mat-card>
+  <div class="extract-title">Extrato</div>
+
+  <div class="extract-presentation">
+    <div>
+      <span class="mat-caption">R$</span> <span class="bold">55.32</span><br />
+      <span class="mat-caption secondary bold">total do consumo</span>
+    </div>
+
+    <div>
+      <span class="mat-caption">R$</span> <span class="bold">5.10</span><br />
+      <span class="mat-caption secondary bold">estimativa</span>
+    </div>
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <div class="extract-list">
+
+    <button class="arrow-left" mat-icon-button><mat-icon>keyboard_arrow_left</mat-icon></button>
+    <button class="arrow-right" mat-icon-button><mat-icon>keyboard_arrow_right</mat-icon></button>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+          <div>Salada de frutas 250g</div>
+          <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+
+    <div class="extract-item">
+      <div class="extract-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="extract-wrapper mat-caption">
+        <div>Salada de frutas 250g</div>
+        <div class="secondary">Frutas</div>
+      </div>
+
+      <div class="extract-price">R$4.05</div>
+    </div>
+  </div>
+
+</mat-card>
