Template da tela de Consumo.

--- a/src/app/modules/list/list.component.html
+++ b/src/app/modules/list/list.component.html
@@ -1,3 +1,109 @@
-<p>
-  list works!
-</p>
+<mat-toolbar class="menu">
+    <div class="icon">
+      <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+    </div>
+    <div class="page">Consumo</div>
+    <div>&nbsp;</div>
+</mat-toolbar>
+
+<mat-card>
+  <div class="filter">
+      <button mat-raised-button>7 Dias</button>
+      <button mat-raised-button>30 Dias</button>
+      <button mat-raised-button color="primary">60 Dias</button>
+  </div>
+
+  <div class="consumption-list">
+
+      <div class="consumption-item">
+
+        <div class="consumption-icon">
+          <mat-icon>local_bar</mat-icon>
+        </div>
+
+        <div class="consumption-wrapper">
+          <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+          <div class="consumption-price ">RS5.22</div>
+        </div>
+
+        <div class="consumption-date mat-caption">16/Fev</div>
+
+      </div>
+
+    <div class="consumption-item">
+
+      <div class="consumption-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="consumption-wrapper">
+        <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+        <div class="consumption-price ">RS5.22</div>
+      </div>
+
+      <div class="consumption-date mat-caption">16/Fev</div>
+
+    </div>
+
+    <div class="consumption-item">
+
+      <div class="consumption-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="consumption-wrapper">
+        <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+        <div class="consumption-price ">RS5.22</div>
+      </div>
+
+      <div class="consumption-date mat-caption">16/Fev</div>
+
+    </div>
+
+    <div class="consumption-item">
+
+      <div class="consumption-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="consumption-wrapper">
+        <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+        <div class="consumption-price ">RS5.22</div>
+      </div>
+
+      <div class="consumption-date mat-caption">16/Fev</div>
+
+    </div>
+
+    <div class="consumption-item">
+
+      <div class="consumption-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="consumption-wrapper">
+        <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+        <div class="consumption-price ">RS5.22</div>
+      </div>
+
+      <div class="consumption-date mat-caption">16/Fev</div>
+
+    </div>
+
+    <div class="consumption-item">
+
+      <div class="consumption-icon">
+        <mat-icon>local_bar</mat-icon>
+      </div>
+
+      <div class="consumption-wrapper">
+        <div class="consumption-description mat-caption">Salada de frutas 250g</div>
+        <div class="consumption-price ">RS5.22</div>
+      </div>
+
+      <div class="consumption-date mat-caption">16/Fev</div>
+
+    </div>
+
+  </div>
+</mat-card>
