--- a/src/app/modules/dashboard/dashboard.component.less
+++ b/src/app/modules/dashboard/dashboard.component.less
@@ -48,7 +48,7 @@
   flex-flow: column nowrap;
   border: 1px solid #999999;
   border-radius: 5px;
-  padding: 0.5em 0.5em;
+  padding: 0.5em;
   margin-top: 1em;
   position: relative;
   z-index: 0;
@@ -57,6 +57,7 @@
     position: absolute;
     top: 50%;
     cursor: pointer;
+    z-index: 1;
   }
 
   .arrow-left {
@@ -81,9 +82,6 @@
     .extract-wrapper {
       flex-basis: 60%;
       font-weight: bolder;
-      div {
-        display: block;
-      }
     }
 
     .extract-price {
