--- a/src/app/modules/form/form.component.html
+++ b/src/app/modules/form/form.component.html
@@ -1,3 +1,34 @@
-<p>
-  form works!
-</p>
+<mat-toolbar class="menu">
+  <div class="icon">
+    <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+  </div>
+  <div class="page">Minha Conta</div>
+  <div>&nbsp;</div>
+</mat-toolbar>
+
+<mat-toolbar class="menu-extended">
+
+  <div class="avatar">
+    <img width="120" src="https://www.shareicon.net/download/2017/02/05/878221_user_512x512.png">
+  </div>
+
+</mat-toolbar>
+
+<mat-card>
+  <form class="form-account">
+
+    <mat-form-field>
+      <input matInput placeholder="Nome">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="CPF">
+    </mat-form-field>
+
+    <mat-form-field>
+      <input matInput placeholder="E-mail">
+    </mat-form-field>
+
+    <button mat-raised-button>ATUALIZAR</button>
+  </form>
+</mat-card>
