--- a/src/app/modules/form/components/form.component.less
+++ b/src/app/modules/form/components/form.component.less
@@ -1,4 +1,4 @@
-@import "../../app.component.less";
+@import "../../../app.component.less";
 
 .menu-extended {
   display: flex;
@@ -18,5 +18,13 @@
 
   button {
     justify-content: center;
+  }
+}
+
+.avatar {
+  cursor: pointer;
+
+  img {
+    border-radius: 50%;
   }
 }
