Aplicando a mascara de CPF no formulário.

--- a/src/app/modules/form/components/form.component.html
+++ b/src/app/modules/form/components/form.component.html
@@ -25,11 +25,11 @@
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="CPF">
+      <input matInput type="text" placeholder="CPF" mask="000.000.000-00">
     </mat-form-field>
 
     <mat-form-field>
-      <input matInput placeholder="E-mail">
+      <input matInput type="email" placeholder="E-mail">
     </mat-form-field>
 
     <button type="button" mat-raised-button>ATUALIZAR</button>
