--- a/src/app/modules/form/components/form.component.html
+++ b/src/app/modules/form/components/form.component.html
@@ -1,6 +1,8 @@
 <mat-toolbar class="menu">
   <div class="icon">
-    <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+    <button mat-icon-button routerLink="/dashboard">
+      <mat-icon>arrow_back</mat-icon>
+    </button>
   </div>
   <div class="page">Minha Conta</div>
   <div>&nbsp;</div>
