--- a/src/app/modules/list/components/list.component.html
+++ b/src/app/modules/list/components/list.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar class="menu">
     <div class="icon">
-      <button mat-icon-button><mat-icon>arrow_back</mat-icon></button>
+      <button mat-icon-button routerLink="/dashboard"><mat-icon>arrow_back</mat-icon></button>
     </div>
     <div class="page">Consumo</div>
     <div>&nbsp;</div>
