Implementando link no botão de extrato

--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
   </div>
   <mat-menu #appMenu="matMenu">
     <button mat-menu-item routerLink="/form">Conta</button>
-    <button mat-menu-item  routerLink="/list">Extrato</button>
+    <button mat-menu-item routerLink="/list">Extrato</button>
   </mat-menu>
   <div class="page">Home</div>
   <div>&nbsp;</div>
@@ -20,7 +20,7 @@
     </div>
 
     <div class="columns buttons">
-      <button mat-raised-button color="primary">Extrato</button>
+      <button mat-raised-button color="primary"  routerLink="/list">Extrato</button>
       <button mat-raised-button>Recarga</button>
     </div>
   </div>
